# SCC

./: scc.code-workspace
backend/: .env.example  manage.py  pyproject.toml  pyrightconfig.json
backend/api/: v1.py
backend/authentication/: admin.py  schemas.py
backend/authentication/api/versions/v1/: api.py  schemas.py
backend/authentication/migrations/: 0001_initial.py
backend/component/: admin.py  models.py
backend/component/migrations/: 0001_initial.py  0002_initial.py
backend/core/: admin.py  models.py
backend/core/migrations/: 0001_initial.py
backend/economy/: admin.py  models.py
backend/economy/migrations/: 0001_initial.py
backend/equipment/: admin.py  models.py
backend/equipment/migrations/: 0001_initial.py  0002_initial.py
backend/lore/: admin.py  models.py
backend/lore/migrations/: 0001_initial.py
backend/manufacturer/: admin.py  models.py
backend/manufacturer/migrations/: 0001_initial.py
backend/scc/: asgi.py  settings.py  urls.py  wsgi.py
backend/scc/settings/: base.py  local.py  preprod.py  production.py
backend/scc/utils/: admin.py  error_codes.py  exceptions.py  managers.py  models.py  responses.py  schemas.py
backend/universe/: admin.py  models.py
backend/universe/migrations/: 0001_initial.py
backend/vehicle/: admin.py  models.py
backend/vehicle/migrations/: 0001_initial.py
