[project]
name = "scc-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Bétrisey Arnaud", email = "dev@arnabetr.ch" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["django (>=6.0.3,<7.0.0)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
