[project]
name = "scc-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Bétrisey Arnaud", email = "dev@arnabetr.ch" }]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "django-environ (>=0.12.0,<1.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
