[project]
name = "scc-backend"
version = "0.1.0"
description = ""
authors = [{ name = "Bétrisey Arnaud", email = "dev@arnabetr.ch" }]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "django-environ (>=0.12.0,<1.0.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "django-ninja (>=1.5.3,<2.0.0)",
    "django-ninja-extra (>=0.31.0,<0.32.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 160
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B", "ANN", "UP", "ANN401"]

# Ignore l'erreur de longueur de ligne (E501)
extend-ignore = ["E501"]
ignore = [
    "ANN001",  # Absence d'annotation pour une variable
    "ANN201",  # Absence d'annotation pour une méthode
    "ANN202",  # Absence de marquage de type de retour
    "ANN204",  # Absence de marquage de type de retour de __init__
    "ANN205",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

# Paramètres supplémentaires pour les annotations de type
#[tool.ruff.tidy-imports]
#require-explicit-annotations = true  # Obligatoire d'avoir des annotations explicites dans les fonctions publiques
